pref: add swagger
