# docs/swagger.json
@@ -3,7 +3,15 @@
     "info": {
         "description": "A simple RBAC base framework built by go.",
         "title": "unicorn framework",
-        "contact": {},
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "ppxb",
+            "url": "http://github.com/ppxb"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "https://github.com/ppxb/unicorn-go/blob/master/LICENCE"
+        },
         "version": "1.0.0"
     },
     "paths": {
@@ -22,13 +30,51 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Common"
+                    "其他"
                 ],
                 "responses": {
                     "20001": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/resp.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/create": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "创建用户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "parameters": [
+                    {
+                        "description": "params",
+                        "name": "params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "20001": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Response"
                         }
                     }
                 }
@@ -36,7 +82,10 @@
         }
     },
     "definitions": {
-        "response.Response": {
+        "request.CreateUser": {
+            "type": "object"
+        },
+        "resp.Response": {
             "type": "object",
             "properties": {
                 "code": {
