# pkg/dto/sys_user.go
@@ -1,6 +1,0 @@
-package dto
-
-type CreateUser struct {
-	Mobile   string `json:"mobile"`
-	Password string `json:"password"`
-}
